--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --watch server.js"
   },
   "author": "nihesh rachakonda",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.53",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1"
   }
